<resources>
    <string name="app_name">Paws &amp; Focus</string>

    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="logout">Logout</string>

    <string name="error_required">This field can\'t be empty</string>
    <string name="error_password">Password must be 8 characters or more</string>
    <string name="error_email">Please fill a valid email</string>
    <string name="error_name">Name can\'t be empty</string>
    <string name="welcome_back">Hi, Welcome Back!</string>
    <string name="register_suggestion">Doesn\'t have an account?</string>
    <string name="welcome">Welcome</string>
    <string name="register_me">Register Me!</string>
    <string name="login_suggestion">Already have an account?</string>

    <string name="tab_text_1">Day</string>
    <string name="tab_text_2">Week</string>
    <string name="tab_text_3">Month</string>

    <string name="profile">Profile</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="timer">Timer</string>
    <string name="time_separator">:</string>
    <string name="start_timer">start timer</string>
    <string name="timer_settings">Timer Settings</string>
    <string name="add_10_minutes">Add 10 Minutes</string>
    <string name="stay_focus">Stay Focus</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="to_do">To Do</string>
    <string name="daily_task">Daily Task</string>
    <string name="new1">New</string>
    <string name="pts">pts</string>
    <string name="add_task">Add Task</string>
    <string name="deadline">Deadline</string>
    <string name="clock">Clock</string>
    <string name="add">Add</string>
    <string name="fill_task_name">Fill Task Name</string>
    <string name="notes">Notes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_test">TestActivity</string>
</resources>